{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 15,
  "lineage": "907e68f6-dc13-4204-d690-8b327e64bdb0",
  "resources": [
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myserver1",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:390844748514:instance/i-05baeeb6367b9e76d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05baeeb6367b9e76d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iam_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae1623d0c7da1437",
            "private_dns": "ip-10-0-2-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.197",
            "public_ip": "23.22.48.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014803ac44a8e5d02",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048ad3cf13a974834",
            "tags": {
              "Name": "myserver1"
            },
            "tags_all": {
              "Name": "myserver1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0845f4ea3f66aad17"
            ]
          },
          "dependencies": [
            "module.aws_infra.aws_security_group.myserver1",
            "module.aws_infra.aws_subnet.public-subnet",
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390844748514:internet-gateway/igw-07f0b0a5fddf12e37",
            "id": "igw-07f0b0a5fddf12e37",
            "owner_id": "390844748514",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-08e05d6b6d76e0560"
          },
          "dependencies": [
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390844748514:route-table/rtb-0b2f033d9ea0f0336",
            "id": "rtb-0b2f033d9ea0f0336",
            "owner_id": "390844748514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f0b0a5fddf12e37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e05d6b6d76e0560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_infra.aws_internet_gateway.my-igw",
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01acfcedd73b07e2c",
            "route_table_id": "rtb-0b2f033d9ea0f0336",
            "subnet_id": "subnet-048ad3cf13a974834"
          },
          "dependencies": [
            "module.aws_infra.aws_internet_gateway.my-igw",
            "module.aws_infra.aws_route_table.my-rt",
            "module.aws_infra.aws_subnet.public-subnet",
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myserver1",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390844748514:security-group/sg-0845f4ea3f66aad17",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0845f4ea3f66aad17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myserver1-sg",
            "name_prefix": "",
            "owner_id": "390844748514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myserver1-sg"
            },
            "tags_all": {
              "Name": "myserver1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e05d6b6d76e0560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390844748514:subnet/subnet-0dbbc13ed3170d38d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbbc13ed3170d38d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390844748514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-08e05d6b6d76e0560"
          },
          "dependencies": [
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390844748514:subnet/subnet-048ad3cf13a974834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048ad3cf13a974834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390844748514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-08e05d6b6d76e0560"
          },
          "dependencies": [
            "module.aws_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.aws_infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390844748514:vpc/vpc-08e05d6b6d76e0560",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fb75d520bcaf227",
            "default_route_table_id": "rtb-0712e20a73a47ee92",
            "default_security_group_id": "sg-002a0c1beb78556fb",
            "dhcp_options_id": "dopt-0a8cbfbc0abedd44b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e05d6b6d76e0560",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0712e20a73a47ee92",
            "owner_id": "390844748514",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}